fix: clear right floats with h2 to prevent overlapping text

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1154,7 +1154,7 @@ a.footnote-ref {
 //
 @media (min-width: 800px) {
   .content h2 {
-    clear: none!important;
+    clear: right!important;
   }
 
   .site-main {
